# Smile

./: .env.example  .gitignore  PLAN.md  README.md  complete-graph.mjs  convert-batches.mjs  foundry.toml  local.sh  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  remappings.txt  run-phases.mjs  skills-lock.json
.github/workflows/: pages.yml
.understand-anything/: .understandignore  fingerprints.json  knowledge-graph.json  meta.json
analytics/: .gitignore  markouts.mjs  package.json
cre-workflow/: .gitignore  config.json  option-settlement.ts  package.json  project.yaml  tsconfig.json  workflow.ts
cre-workflow/contracts/: package.json
cre-workflow/settlement/: config.json  package.json  tsconfig.json  workflow.ts  workflow.yaml
docs/: Smile.pptx  aqua-incubator-proposal.md  build-notes.md  cre-simulation.md  limitations.md  reference-table.html  solutions.md
docs/plans/: 2026-07-11-phase01-hardening.md  2026-07-12-s12-defined-risk-netting.md
frontend/: next.config.ts  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx  providers.tsx
frontend/components/: AuthorizeRange.tsx  IncomeOneClick.tsx  (+7 more)
keeper/: package.json  roll.mjs
script/: DemoTrade.s.sol  Deploy.s.sol
src/: OptionToken.sol  OptionTokenFactory.sol
test/: AquaCollateralVault.t.sol  AquaOptionSettlement.t.sol  FirmEscrow.t.sol  GasProbe.t.sol  MultiActorMarketFlow.t.sol  OptionPricingEngine.t.sol  OptionPricingHook.t.sol  OptionToken.t.sol  Phase12Hardening.t.sol  SmileSwapVMRouter.t.sol
volsurface/: README.md  pyproject.toml  run.sh  server.py
(+92 files in other folders)
